--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.54.0",
     "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "pg": "^8.0.0",
     "react-query": "^4.0.0",
     "react-toastify": "^9.0.0",
