--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.54.0",
+  "@mui/material": "^5.13.7",
+  "@mui/icons-material": "^5.11.16",
+  "@emotion/react": "^11.11.0",
+  "@emotion/styled": "^11.11.0",
     "next": "15.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
