--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dev": "next dev",
     "build": "next build",
     "start": "next start",
+  "test": "jest --passWithNoTests",
     "lint": "next lint"
   },
   "dependencies": {
@@ -35,6 +36,12 @@
     "react-virtualized": "^9.0.0"  
   },
   "devDependencies": {
+  "@testing-library/react": "^14.0.0",
+  "@testing-library/jest-dom": "^6.0.0",
+  "jest": "^29.0.0",
+  "@types/jest": "^29.0.0",
+  "ts-jest": "^29.0.0",
+  "jest-environment-jsdom": "^29.0.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
