--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
+      - name: Lint
+        run: npm run lint --if-present
       - name: Build
         run: npm run build --if-present
       - name: Run tests
