--- a/ReportEngine/.github/workflows/ci.yml
+++ b/ReportEngine/.github/workflows/ci.yml
@@ -95,3 +95,62 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:latest
+
+  integration:
+    runs-on: ubuntu-latest
+    needs: backend-tests
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build compose stack
+        run: |
+          docker compose -f docker-compose.yml build --pull
+      - name: Start compose stack
+        run: |
+          docker compose -f docker-compose.yml up -d
+      - name: Wait for services
+        run: |
+          sleep 5
+          until curl -sS http://localhost:4000/api/health | grep -q ok; do sleep 1; done
+      - name: Run smoke tests
+        run: |
+          curl -sS http://localhost:4000/api/health
+          curl -sS "http://localhost:4000/api/reports/summary?start=2024-01-01&end=2025-08-20&groupBy=region&limit=5" | jq '.meta'
+      - name: Tear down
+        run: docker compose -f docker-compose.yml down -v
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: backend-tests
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push backend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./packages/backend
+          file: ./packages/backend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/reportengine-backend:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/reportengine-backend:latest
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./packages/frontend
+          file: ./packages/frontend/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/reportengine-frontend:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/reportengine-frontend:latest
