--- a/ReportEngine/package.json
+++ b/ReportEngine/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "dev:backend": "cd packages/backend && npm run dev",
     "dev:frontend": "cd packages/frontend && npm run dev",
-    "dev": "concurrently \"cd packages/backend && npm run dev\" \"cd packages/frontend && npm run dev\""
+    "dev": "concurrently \"cd packages/backend && npm run dev\" \"cd packages/frontend && npm run dev\"",
+    "compose:up": "docker compose -f docker-compose.yml up --build -d",
+    "compose:down": "docker compose -f docker-compose.yml down -v",
+    "compose:run": "npm run compose:up && sleep 5 && docker compose -f docker-compose.yml exec -T backend node src/seed.js && docker compose -f docker-compose.yml exec -T backend node scripts/refresh_mv.js && node packages/backend/tmp/benchmark.js && npm run compose:down"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
