--- a/ReportEngine/ReportEngine/.github/workflows/ci.yml
+++ b/ReportEngine/ReportEngine/.github/workflows/ci.yml
@@ -95,7 +95,6 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:latest
-
   integration:
     runs-on: ubuntu-latest
     needs: backend-tests
@@ -109,18 +108,20 @@ jobs:
       - name: Start compose stack
         run: |
           docker compose -f docker-compose.yml up -d
-      - name: Wait for services
+      - name: Wait for services (bounded + diagnostics)
         run: |
-          sleep 5
-          until curl -sS http://localhost:4000/api/health | grep -q ok; do sleep 1; done
-      - name: Run smoke tests
-        run: |
-          curl -sS http://localhost:4000/api/health
-          curl -sS "http://localhost:4000/api/reports/summary?start=2024-01-01&end=2025-08-20&groupBy=region&limit=5" | jq '.meta'
-      - name: Tear down
-        run: docker compose -f docker-compose.yml down -v
-
+          set -euo pipefail
+          for i in {1..120}; do
+            if curl -fsS http://localhost:4000/api/health | grep -q ok; then
+              echo "API is healthy"
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "API did not become healthy after 120s"
+          docker compose -f docker-compose.yml ps || true
   publish:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: backend-tests
     permissions:
@@ -129,28 +130,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push backend image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: ./packages/backend
           file: ./packages/backend/Dockerfile
           push: true
+          # Optional: publish multi-arch images
+          # platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/reportengine-backend:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/reportengine-backend:latest
       - name: Build and push frontend image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: ./packages/frontend
           file: ./packages/frontend/Dockerfile
           push: true
+          # Optional: publish multi-arch images
+          # platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:${{ github.sha }}
             ghcr.io/${{ github.repository_owner }}/reportengine-frontend:latest
