--- a/ReportEngine/ReportEngine/ReportEngine/docker-compose.yml
+++ b/ReportEngine/ReportEngine/ReportEngine/docker-compose.yml
@@ -15,8 +15,10 @@ services:
       context: ./packages/backend
       dockerfile: Dockerfile
     environment:
-      DATABASE_URL: postgresql://user:pass@db:5432/reportengine
-      PORT: 4000
+      DATABASE_URL: ${DATABASE_URL}
+      PORT: ${PORT:-4000}
+    env_file:
+      - ./packages/backend/.env
     ports:
       - "4000:4000"
     depends_on:
