--- a/ReportEngine/ReportEngine/ReportEngine/packages/frontend/package.json
+++ b/ReportEngine/ReportEngine/ReportEngine/packages/frontend/package.json
@@ -15,8 +15,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.27.1",
+  "@babel/core": "^7.28.3",
+  "@babel/preset-env": "^7.22.9",
+  "@babel/preset-react": "^7.22.9",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.0",
